# serializer version: 1
# name: test_config
  dict({
    'back_led_brightness': None,
    'buzzer_enabled': None,
    'cloud_connection': None,
    'co2_automatic_baseline_calibration_days': 8,
    'configuration_control': <ConfigurationControl.BOTH: 'both'>,
    'corrections': None,
    'country': 'DE',
    'display_brightness': 0,
    'front_led_brightness': None,
    'gps_interval': None,
    'gps_mode': None,
    'led_bar_brightness': 100,
    'led_bar_mode': <LedBarMode.CO2: 'co2'>,
    'measurement_interval': None,
    'nox_learning_offset': 12,
    'pm_standard': <PmStandard.UGM3: 'ugm3'>,
    'post_data_to_airgradient': True,
    'temperature_unit': <TemperatureUnit.CELSIUS: 'c'>,
    'touch_led_intensity': None,
    'tvoc_learning_offset': 12,
  })
# ---
# name: test_current_fixtures[current_measures.json]
  dict({
    'ambient_temperature': 22.17,
    'battery_percentage': None,
    'battery_voltage': None,
    'boot_time': 4,
    'charge_voltage': None,
    'compensated_ambient_temperature': 22.17,
    'compensated_pm02': None,
    'compensated_relative_humidity': 47.0,
    'firmware_version': '3.1.1',
    'model': 'I-9PSL',
    'nitrogen_index': 1,
    'pm003_count': 270,
    'pm005_count': None,
    'pm01': 22,
    'pm01_count': None,
    'pm02': 34.0,
    'pm02_count': None,
    'pm10': 41,
    'pm10_count': None,
    'pm50_count': None,
    'raw_ambient_temperature': 23.1,
    'raw_nitrogen': 16931.0,
    'raw_pm02': 34,
    'raw_relative_humidity': 32.0,
    'raw_total_volatile_organic_component': 31792.0,
    'rco2': 778,
    'relative_humidity': 47.0,
    'serial_number': '84fce612f5b8',
    'signal_strength': -52,
    'total_volatile_organic_component_index': 99,
  })
# ---
# name: test_current_fixtures[current_measures_2.json]
  dict({
    'ambient_temperature': 20.35,
    'battery_percentage': None,
    'battery_voltage': None,
    'boot_time': 309,
    'charge_voltage': None,
    'compensated_ambient_temperature': 20.35,
    'compensated_pm02': 6.83,
    'compensated_relative_humidity': 32.51,
    'firmware_version': '3.1.21',
    'model': 'I-9PSL',
    'nitrogen_index': 1,
    'pm003_count': 256,
    'pm005_count': None,
    'pm01': 0,
    'pm01_count': None,
    'pm02': 6.83,
    'pm02_count': None,
    'pm10': 2,
    'pm10_count': None,
    'pm50_count': None,
    'raw_ambient_temperature': 20.35,
    'raw_nitrogen': 15568.08,
    'raw_pm02': 2,
    'raw_relative_humidity': 32.51,
    'raw_total_volatile_organic_component': 33774.83,
    'rco2': 566,
    'relative_humidity': 32.51,
    'serial_number': 'aaaaaaaaaa',
    'signal_strength': -40,
    'total_volatile_organic_component_index': 138,
  })
# ---
# name: test_current_fixtures[current_measures_zero.json]
  dict({
    'ambient_temperature': 0.0,
    'battery_percentage': None,
    'battery_voltage': None,
    'boot_time': 4,
    'charge_voltage': None,
    'compensated_ambient_temperature': 0.0,
    'compensated_pm02': 0.0,
    'compensated_relative_humidity': 0.0,
    'firmware_version': '3.1.1',
    'model': 'I-9PSL',
    'nitrogen_index': 1,
    'pm003_count': 270,
    'pm005_count': None,
    'pm01': 22,
    'pm01_count': None,
    'pm02': 0.0,
    'pm02_count': None,
    'pm10': 41,
    'pm10_count': None,
    'pm50_count': None,
    'raw_ambient_temperature': 23.1,
    'raw_nitrogen': 16931.0,
    'raw_pm02': 34,
    'raw_relative_humidity': 32.0,
    'raw_total_volatile_organic_component': 31792.0,
    'rco2': 778,
    'relative_humidity': 0.0,
    'serial_number': '84fce612f5b8',
    'signal_strength': -52,
    'total_volatile_organic_component_index': 99,
  })
# ---
# name: test_current_fixtures[measures_after_boot.json]
  dict({
    'ambient_temperature': None,
    'battery_percentage': None,
    'battery_voltage': None,
    'boot_time': 0,
    'charge_voltage': None,
    'compensated_ambient_temperature': None,
    'compensated_pm02': None,
    'compensated_relative_humidity': None,
    'firmware_version': '3.0.8',
    'model': 'I-9PSL',
    'nitrogen_index': None,
    'pm003_count': None,
    'pm005_count': None,
    'pm01': None,
    'pm01_count': None,
    'pm02': None,
    'pm02_count': None,
    'pm10': None,
    'pm10_count': None,
    'pm50_count': None,
    'raw_ambient_temperature': None,
    'raw_nitrogen': None,
    'raw_pm02': None,
    'raw_relative_humidity': None,
    'raw_total_volatile_organic_component': None,
    'rco2': None,
    'relative_humidity': None,
    'serial_number': '84fce612f5b8',
    'signal_strength': -59,
    'total_volatile_organic_component_index': None,
  })
# ---
# name: test_latest_version
  '3.1.4'
# ---
